[tool.poetry]
name = "type-fast"
version = "0.1.0"
description = "Web app for testing your typing speed"
authors = ["Dauletkhan Assanov <ab.dauletkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
